# spaghetti-ui

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
spaghetti_ui/: app.py  cmd.py  log.py  router.py  settings.py  state.py
spaghetti_ui/endpoints/: dependencies.py  index.py
spaghetti_ui/frontend/: .eslintrc.cjs  .gitignore  index.html  package.json
spaghetti_ui/frontend/src/: hooks.ts  index.scss  index.tsx
spaghetti_ui/frontend/src/api/: index.ts
spaghetti_ui/frontend/src/graph/: index.ts
spaghetti_ui/frontend/src/pages/Home/: index.tsx  style.module.scss
spaghetti_ui/frontend/src/pages/Home/Graph/: Graph2d.tsx  Graph3d.tsx  index.tsx  style.module.scss
spaghetti_ui/frontend/src/pages/Home/Parameters/: index.tsx  style.module.scss
spaghetti_ui/frontend/src/store/: index.ts  parameters.ts  ui.ts
spaghetti_ui/tests/: test_app.py  test_cmd.py  test_state.py
spaghetti_ui/tests/endpoints/: conftest.py  test_dependencies.py  test_index.py
