[tool.poetry]
name = "spaghetti-ui"
version = "0.1.1"
description = "Web app around the spaghetti Python module dependency tracer"
authors = ["Denis BOURGE <denis.bourge@sharingcloud.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^12.6.0"
structlog = "^22.1.0"
typing-extensions = "^4.4.0"
click = "^8.1.3"
fastapi = "^0.86.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
spaghetti = {git = "https://github.com/Srynetix/spaghetti", tag = "v0.3.0"}

[tool.poetry.group.dev.dependencies]
flakeheaven = "^3.2.1"
black = "^22.10.0"
isort = "^5.10.1"
flake8-isort = "^5.0.0"
pytest = "^7.2.0"
duct = "^0.6.4"
coverage = {extras = ["toml"], version = "^6.5.0"}
pytest-cov = "^4.0.0"
flake8-bandit = "3.0.0"
flake8-bugbear = "^22.10.27"
mypy = "^0.990"
pytest-mock = "^3.10.0"
pytest-asyncio = "^0.20.2"
requests = "^2.28.1"

[tool.poetry.scripts]
spaghetti-ui = "spaghetti_ui.cmd:run"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"

[tool.flakeheaven]
format = "grouped"
max_line_length = 100
show_source = true
exclude = ["frontend"]

[tool.flakeheaven.plugins]
flake8-bandit = ["+*"]
flake8-bugbear = ["+*"]
flake8-isort = ["+*"]
pyflakes = ["+*"]
pycodestyle = ["+*", "-W503"]

[tool.flakeheaven.exceptions."spaghetti_ui/tests/"]
flake8-bandit = ["-S101", "-S108"]

[tool.coverage]
[tool.coverage.report]
omit = [
    "makefile.py",
    "frontend"
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
exclude = [
    "spaghetti_ui/frontend"
]

[[tool.mypy.overrides]]
module = "duct"
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
